my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/ENALLOW/ENALLOW.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ENALLOW.dml:19:1: In b
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ENALLOW.dml:25:5: error ENALLOW: this object is not allowed here
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ENALLOW.dml:23:5: error ENALLOW: this object is not allowed here
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ENALLOW.dml:21:5: error ENALLOW: this object is not allowed here
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ENALLOW.dml:10:1: In p
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ENALLOW.dml:16:5: error ENALLOW: this object is not allowed here
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ENALLOW.dml:14:5: error ENALLOW: this object is not allowed here
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ENALLOW.dml:12:5: error ENALLOW: this object is not allowed here
